# DSharpPlus

./: .appveyor.yml  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.sh  .travis.yml  0001-Auto-register-processors-Expose-methods-to-manipulat.patch  0002-Add-a-few-more-methods.patch  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  DSharpPlus.SlashCommands.csproj  DSharpPlus.SlashCommands.sln  DSharpPlus.UWP.csproj  DSharpPlus.sln  DSharpPlus.sln.DotSettings  DSharpPlus.slnx  DSharpPlus.targets  Development Plan.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  DiscordSharp.LICENSE  DiscordSharp.sln  DiscordSharp.sln.save  ExtensionMethods.cs  IChoiceProvider.cs  InteractionContext.cs  LICENSE  LICENSE-MIT  LavalinkNodeConnection.cs  NuGet.config  README.md  SharpCord.sln  SharpCord.sln.save  SlashCommandConfiguration.cs  (+24 more)
.circleci/: config.yml
.git-hooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.nuget/: NuGet.config
Attributes/: ChoiceAttribute.cs  ChoiceNameAttribute.cs  ChoiceProviderAttribute.cs  ContextMenuAttribute.cs  DontInjectAttribute.cs  OptionAttribute.cs  SlashCommandAttribute.cs  SlashCommandGroupAttribute.cs  SlashModuleLifespanAttribute.cs
Built-in Checks/: SlashRequireBotPermissionsAttribute.cs  SlashRequireGuildAttribute.cs  SlashRequirePermissionsAttribute.cs  SlashRequireUserPermissionsAttribute.cs
Contexts/: BaseContext.cs  InteractionContext.cs
DSharp.Github/: DSharp.Github.csproj  DSharpPlus.Github.csproj  GitHubClient.cs
DSharpPlus.Analyzers/: DSharpPlus.Analyzers.csproj
DSharpPlus.CH/: CHBuilder.cs  CHConfiguration.cs  CommandController.cs  DSharpPlus.CH.csproj  DiscordClientExtensionMethods.cs  IMessageCommandModuleResult.cs  MessageCommandModule.cs  MessageCommandModuleResult.cs  README.md  TODO.md  names.md
DSharpPlus.Caching/: DSharpPlus.Caching.csproj
DSharpPlus.CommandAll/: AbstractContext.cs  CommandAllConfiguration.cs  CommandAllExtension.cs  CommandExecutor.cs  DSharpPlus.CommandAll.csproj  ExtensionMethods.cs
DSharpPlus.Commands/: AbstractContext.cs  AllowDmsAttribute.cs  Command.cs  CommandAttribute.cs  CommandConfig.cs  CommandContext.cs  CommandExecutor.cs  CommandExtension.cs  CommandModule.cs  CommandsConfiguration.cs  CommandsExtension.cs  DSharpPlus.Commands.csproj  DSharpPlus.Commands.nuspec  DefaultCommandExecutor.cs  DenyGuildsAttribute.cs  DescriptionAttribute.cs  DmUsageRule.cs  ExtensionMethods.cs  ICommandExecutor.cs  Module.cs  ParameterAttribute.cs  ProcessorInvokingHandlers.cs  RefreshEventHandler.cs  RegisterToGuildsAttribute.cs  RequirePermissionsAttribute.cs
DSharpPlus.CommandsNext/: BaseCommandModule.cs  CommandsNextConfig.cs  CommandsNextConfiguration.cs  CommandsNextEvents.cs  CommandsNextExtension.cs  CommandsNextModule.cs  CommandsNextUtilities.cs  DSharpPlus.CommandsNext.csproj  DiscordClientExtensions.cs  ExtensionMethods.cs  MessageHandler.cs  Polyfills.cs
DSharpPlus.Core/: DSharpPlus.Core.csproj  DiscordClient.cs  Optional.cs
DSharpPlus.Docs/: Program.cs  docfx.json  index.md
DSharpPlus.Github/: DSharpPlus.Github.csproj  GitHubClient.cs  TestBot.cs  packages.config
DSharpPlus.Hosting/: DSharpPlus.Hosting.csproj  DiscordClientService.cs  DiscordClientStartupOptions.cs  HostBuilderExtensions.cs
DSharpPlus.Interactivity/: Extensions.cs  (+8 more)
cpp/: CMakeLists.txt  Makefile  README.md
cpp/src/dave/: codec_utils.cpp  cryptor_manager.cpp  decryptor.h  frame_processors.cpp  mls_key_ratchet.cpp  mls_key_ratchet.h  version.cpp  version.h
cpp/src/dave/mls/: session.cpp
cpp/src/dave/mls/detail/: persisted_key_pair_apple.cpp
cpp/src/dave/utils/: leb128.cpp  scope_exit.h
cpp/test/: boringssl_cryptor_tests.cpp  cryptor_manager_tests.cpp  cryptor_tests.cpp  dave_test.h  static_key_ratchet.cpp  static_key_ratchet.h
cpp/vcpkg-alts/boringssl/: vcpkg.json
lib/libaerith/: CMakeLists.txt  credential_bindings.cpp  roster_wrapper.cpp  roster_wrapper.h  session_bindings.cpp  vector_wrapper.cpp  vector_wrapper.h
lib/libaerith/inc/dave/: .gitmodules  LICENSE  README.md
lib/libaerith/inc/dave/.github/workflows/: main.yaml
lib/libaerith/inc/dave/cpp/: .clang-format
lib/libaerith/inc/dave/cpp/afl-driver/src/: main.cpp
lib/libaerith/inc/dave/cpp/src/dave/: boringssl_cryptor.cpp  boringssl_cryptor.h  codec_utils.h  common.h  cryptor.cpp  cryptor.h  cryptor_manager.h  decryptor.cpp  encryptor.cpp  encryptor.h  frame_processors.h  key_ratchet.h  logger.cpp  logger.h
lib/libaerith/inc/dave/cpp/src/dave/mls/: parameters.cpp  parameters.h  persisted_key_pair.cpp  persisted_key_pair.h  persisted_key_pair_null.cpp  session.h  user_credential.cpp  user_credential.h  util.cpp  util.h
lib/libaerith/inc/dave/cpp/src/dave/mls/detail/: persisted_key_pair.h  persisted_key_pair_generic.cpp  persisted_key_pair_null.cpp  persisted_key_pair_win.cpp
lib/libaerith/inc/dave/cpp/src/dave/utils/: array_view.h  clock.h  leb128.h
lib/libaerith/inc/dave/cpp/test/: CMakeLists.txt  codec_utils_tests.cpp  dave_test.cpp
lib/libaerith/inc/dave/cpp/vcpkg-alts/boringssl/overlay-ports/mlspp/: portfile.cmake  vcpkg.json
lib/libaerith/inc/dave/js/: DisplayableCode.ts  KeySerialization.ts  PairwiseFingerprint.ts  README.md  jest-setup.js  pnpm-lock.yaml
lib/libaerith/inc/dave/js/__tests__/: DisplayableCode-test.ts  KeyFingerprint-test.ts  KeySerialization-test.ts
(+6163 files in other folders)
